[metadata]
name = PyBioMed

author = CBDD Group
author_email = gadsby@163.com and oriental-cds@163.com

version = 1.0

description = biological molecular representation Python package (PyBioMed)
long_description = file: README.md
long_description_content_type = text/markdown

license = BSD

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = false
packages = find:
